--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,16 @@ nav h2{
     border-radius: 5px;
     margin-right: 30px;
 }
+.main-btn{
+    padding: 18px 35px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    border: none;
+    background: white;
+    border-radius: 5px;
+}
 .banner{
     display: flex;
     align-items: center;
